--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -128,7 +128,7 @@ WATER_MAP:
         - --dem-name
         - 'copernicus'
         - Ref::granules
-      timeout: TODO
+      timeout: 36000
       vcpu: 1
       memory: 31600
     - name: ''
@@ -150,7 +150,7 @@ WATER_MAP:
         - Ref::hand_fraction
         - --membership-threshold
         - Ref::membership_threshold
-      timeout: TODO
+      timeout: 10800
       vcpu: 1
       memory: 126000
     - name: FLOOD_MAP
@@ -172,6 +172,6 @@ WATER_MAP:
         - Ref::iterative_min
         - --iterative-max
         - Ref::iterative_max
-      timeout: TODO
+      timeout: 25200
       vcpu: 1
       memory: 126000
