--- a/.github/workflows/release-template-comment.yml
+++ b/.github/workflows/release-template-comment.yml
@@ -26,7 +26,12 @@ jobs:
             - [ ] (If applicable) Updated the dependencies and indicated any downstream changes that are required
             - [ ] Added/updated documentation for these changes
             - [ ] Added/updated tests for these changes
-            - [ ] If the step function code has changed, have you drained the job queue before merging?
+            - [ ] If the step function code has changed\*, have you drained the job queue before merging?
+
+            \* For example, if the interface for a Lambda function has changed to expect different input,
+            then currently running jobs (which use the old step function definition) will call the new
+            function with the old input. So we must drain the job queue before deployment, so that the new
+            function is only called by the new step function definition.
 
             ### Reviewer checklist
 
