updates to job spec for hyp3

--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -27,6 +27,27 @@ INSAR_ISCE_TEST:
           minLength: 67
           maxLength: 67
           example: S1B_IW_SLC__1SDV_20210711T014947_20210711T015013_027740_034F80_D404
+    estimate_ionosphere_delay:
+      api_schema:
+        default: false
+        type: bool
+        description: "Whether to apply ionosphere correction to the ARIA-S1-GUNW as an additional layer"
+    region_of_interest:
+      api_schema:
+        default: none
+        type: array
+        minItems: 4
+        maxItems: 4
+        description: The bounding box of the region of interest as xmin, ymin, xmax, ymax
+        example: [-121.167298, 33.929114, -118.055825, 35.904876]
+        items:
+          description: the x or y coordinates of the bounding box
+          type: float
+    frame_id:
+      api_schema:
+        default: none
+        type: int
+        description: the frame-id derived from ARIA-S1-GUNW fixed frame convention; if specified, region of interest, must be too.
     bucket_prefix:
       default:  '""'
   validators: []
