Add in ERA5 as option for ISCE_INSAR

--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -37,6 +37,7 @@ INSAR_ISCE:
           - HRRR
           - HRES
           - GMAO
+          - ERA5
     bucket_prefix:
       default:  '""'
   validators: []
