--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -46,7 +46,7 @@ INSAR_ISCE_TEST:
       api_schema:
         description: Coherence threshold for points to include when performing ESD
         defult: 0.5
-        type: float
+        type: number
         min: 0.0
         max: 1.0
     bucket_prefix:
