--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -37,17 +37,12 @@ INSAR_ISCE_TEST:
           - HRRR
           - HRES
           - GMAO
-    do_esd:
-      api_schema:
-        description: Whether or not to perform Enhanced Spectral Diversity for improved coregistration
-        defult: false
-        type: boolean
     esd_coherence_threshold:
       api_schema:
-        description: Coherence threshold for points to include when performing ESD
-        defult: 0.5
+        description: Coherence threshold value, between 0 and 1, for points to include when performing ESD, or -1 for no ESD correction.
+        default: -1.0
         type: number
-        minimum: 0.0
+        minimum: -1.0
         maximum: 1.0
     bucket_prefix:
       default:  '""'
