--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -31,7 +31,7 @@ INSAR_ISCE_TEST:
       api_schema:
         description: Whether to apply ionosphere correction to the ARIA-S1-GUNW as an additional layer.
         default: false
-        type: bool
+        type: boolean
     frame_id:
       api_schema:
         description: Subset GUNW products to this frame. The default is `-1` with no subsetting of the products.
