--- a/.github/workflows/deploy-daac.yml
+++ b/.github/workflows/deploy-daac.yml
@@ -6,7 +6,7 @@ on:
       - main
       - develop
 
-concurrency: deploy-daac
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   deploy:
