--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 
-concurrency: deploy-enterprise
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   deploy:
