treat EDL username and password the same as other secrets

--- a/job_spec/AUTORIFT_ITS_LIVE_TEST.yml
+++ b/job_spec/AUTORIFT_ITS_LIVE_TEST.yml
@@ -51,3 +51,6 @@ AUTORIFT_TEST:
       timeout: 10800
       vcpu: 1
       memory: 31600
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
