--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -131,6 +131,9 @@ WATER_MAP:
       timeout: 36000
       vcpu: 1
       memory: 31600
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
     - name: ''
       image: ghcr.io/asfhyp3/asf-tools
       command:
@@ -153,6 +156,9 @@ WATER_MAP:
       timeout: 36000
       vcpu: 1
       memory: 126000
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
     - name: FLOOD_MAP
       image: ghcr.io/asfhyp3/asf-tools
       command:
@@ -175,3 +181,6 @@ WATER_MAP:
       timeout: 86400
       vcpu: 1
       memory: 126000
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
