--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -88,6 +88,9 @@ INSAR_ISCE_TEST:
       timeout: 21600
       vcpu: 1
       memory: 7500
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
     - name: TROPOSPHERE
       image: ghcr.io/dbekaert/raider
       image_tag: test
@@ -104,6 +107,8 @@ INSAR_ISCE_TEST:
       vcpu: 1
       memory: 7500
       secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
         - RAIDER_ECMWF_ERA5_UID
         - RAIDER_ECMWF_ERA5_API_KEY
         - RAIDER_HRES_EMAIL
