--- a/job_spec/RIVER_WIDTH.yml
+++ b/job_spec/RIVER_WIDTH.yml
@@ -62,6 +62,9 @@ RIVER_WIDTH:
       timeout: 36000
       vcpu: 1
       memory: 63200
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
     - name: WATER_MAP
       image: ghcr.io/asfhyp3/asf-tools
       command:
@@ -74,6 +77,9 @@ RIVER_WIDTH:
       timeout: 36000
       vcpu: 1
       memory: 126000
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
     - name: ''
       image: 845172464411.dkr.ecr.us-west-2.amazonaws.com/asfhyp3/riverwidthsar
       command:
@@ -84,3 +90,6 @@ RIVER_WIDTH:
       timeout: 36000
       vcpu: 1
       memory: 31600
+      secrets:
+        - EARTHDATA_USERNAME
+        - EARTHDATA_PASSWORD
