--- a/.github/workflows/deploy-replace-hkh.yml
+++ b/.github/workflows/deploy-replace-hkh.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         include:
           - environment: hyp3-replace-hkh
-            domain: ''
+            domain: hyp3-replace-hkh.asf.alaska.edu
             template_bucket: cf-templates-1hz9ldhhl4ahu-us-west-2
             image_tag: latest
             product_lifetime_in_days: 14
