--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -39,7 +39,7 @@ WATER_MAP:
       api_schema:
         description: WM vsicurl
         type: string
-
+  validators: []
   tasks:
     - name: FLOOD_MAP
       image: ghcr.io/asfhyp3/asf-tools
