Set insar phase filter parameter minimum value to exclusive

--- a/job_spec/INSAR_GAMMA_TEST.yml
+++ b/job_spec/INSAR_GAMMA_TEST.yml
@@ -68,6 +68,7 @@ INSAR_GAMMA_TEST:
         description: Adaptive phase filter parameter
         type: number
         minimum: 0.0
+        exclusiveMinimum: true
         maximum: 1.0
         default: 0.6
   validators:
