--- a/job_spec/INSAR_GAMMA_TEST.yml
+++ b/job_spec/INSAR_GAMMA_TEST.yml
@@ -106,8 +106,9 @@ INSAR_GAMMA_TEST:
         - Ref::phase_filter_parameter
         - Ref::granules
       timeout: 10800
-      vcpu: 1
-      memory: 31600
+      vcpu: 4
+      memory: 30720
+      disk: 21
       secrets:
         - EARTHDATA_USERNAME
         - EARTHDATA_PASSWORD
