--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -130,8 +130,9 @@ WATER_MAP:
         - 'copernicus'
         - Ref::granules
       timeout: 36000
-      vcpu: 1
-      memory: 31600
+      vcpu: 4
+      memory: 30720
+      disk: 21
       secrets:
         - EARTHDATA_USERNAME
         - EARTHDATA_PASSWORD
@@ -155,8 +156,9 @@ WATER_MAP:
         - --membership-threshold
         - Ref::membership_threshold
       timeout: 36000
-      vcpu: 1
-      memory: 126000
+      vcpu: 16
+      memory: 122880
+      disk: 21
     - name: FLOOD_MAP
       image: ghcr.io/asfhyp3/asf-tools
       command:
@@ -177,5 +179,6 @@ WATER_MAP:
         - --iterative-max
         - Ref::iterative_max
       timeout: 86400
-      vcpu: 1
-      memory: 126000
+      vcpu: 16
+      memory: 122880
+      disk: 21
