--- a/job_spec/INSAR_GAMMA.yml
+++ b/job_spec/INSAR_GAMMA.yml
@@ -95,8 +95,9 @@ INSAR_GAMMA:
         - Ref::looks
         - Ref::granules
       timeout: 10800
-      vcpu: 1
-      memory: 31600
+      vcpu: 4
+      memory: 30720
+      disk: 21
       secrets:
         - EARTHDATA_USERNAME
         - EARTHDATA_PASSWORD
