--- a/job_spec/WATER_MAP_EQ.yml
+++ b/job_spec/WATER_MAP_EQ.yml
@@ -88,8 +88,9 @@ WATER_MAP_EQ:
         - 'copernicus'
         - Ref::granules
       timeout: 36000
-      vcpu: 1
-      memory: 31600
+      vcpu: 4
+      memory: 30720
+      disk: 21
       secrets:
         - EARTHDATA_USERNAME
         - EARTHDATA_PASSWORD
@@ -107,5 +108,6 @@ WATER_MAP_EQ:
         - --hand-fraction
         - Ref::hand_fraction
       timeout: 36000
-      vcpu: 1
-      memory: 126000
+      vcpu: 16
+      memory: 122880
+      disk: 21
