--- a/tests/cfg.env
+++ b/tests/cfg.env
@@ -1,4 +1,5 @@
 FLASK_DEBUG=true
+DOMAIN_NAME=hyp3-domain-name
 JOBS_TABLE_NAME=hyp3-db-table-job
 USERS_TABLE_NAME=hyp3-db-table-user
 SUBSCRIPTIONS_TABLE_NAME=hyp3-db-table-subscriptions
