increase memory available to INSAR_GAMMA jobs in azdwr-hyp3 deployment

--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -125,8 +125,8 @@ jobs:
             image_tag: latest
             product_lifetime_in_days: 30
             quota: 0
-            job_files: job_spec/INSAR_GAMMA.yml
-            instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
+            job_files: job_spec/INSAR_GAMMA_HIGH_MEMORY.yml
+            instance_types: r6id.xlarge,r6id.2xlarge,r6id.4xlarge,r6id.8xlarge,r5dn.xlarge,r5dn.2xlarge,r5d.xlarge,r5d.2xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
             required_surplus: 0
