--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -95,7 +95,7 @@ jobs:
             image_tag: latest
             product_lifetime_in_days: 14
             quota: 0
-            job_files: job_spec/RTC_GAMMA.yml job_spec/WATER_MAP.yml
+            job_files: job_spec/RTC_GAMMA.yml job_spec/WATER_MAP.yml job_spec/WATER_MAP_EQ.yml
             instance_types: r6id.xlarge,r6id.2xlarge,r6id.4xlarge,r6id.8xlarge,r5dn.xlarge,r5dn.2xlarge,r5d.xlarge,r5d.2xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
