--- a/job_spec/WATER_MAP.yml
+++ b/job_spec/WATER_MAP.yml
@@ -82,7 +82,7 @@ WATER_MAP:
     known_water_threshold:
       api_schema:
         description: Threshold for extracting known water area in percent. Ignored when flood_depth_estimator is None.
-        default: 30.0
+        default: None
         type: number
     iterative_min:
       api_schema:
@@ -94,6 +94,14 @@ WATER_MAP:
         description: Maximum bound used for iterative method. Ignored when flood_depth_estimator is None.
         default: 15
         type: integer
+    minimzation_metric:
+      api_schema:
+        description: Evaluation method to minimize. A value of None indicates that flood depth estimation will not be performed.
+        default: fmi
+        type: string
+        enum:
+          - fmi
+          - ts
   validators:
     - check_dem_coverage
   tasks:
@@ -176,6 +184,8 @@ WATER_MAP:
         - Ref::iterative_min
         - --iterative-max
         - Ref::iterative_max
+        - Ref::minimization-metric
+        - --minimization_metric
       timeout: 86400
       vcpu: 1
       memory: 126000
