--- a/job_spec/WATER_MAP_TEST.yml
+++ b/job_spec/WATER_MAP_TEST.yml
@@ -81,7 +81,7 @@ WATER_MAP:
         type: number
     known_water_threshold:
       api_schema:
-        description: Threshold for extracting known water area in percent. Ignored when flood_depth_estimator is None.
+        description: Threshold for extracting known water area in percent. A water threshold is computed when value is None.
         default: None
         type: number
     iterative_min:
@@ -96,7 +96,7 @@ WATER_MAP:
         type: integer
     minimization_metric:
       api_schema:
-        description: Evaluation method to minimize.
+        description: Evaluation method to minimize. Options include a Fowlkes-Mallows index (fmi) or a threat score (ts).
         default: fmi
         type: string
         enum:
