--- a/job_spec/WATER_MAP_TEST.yml
+++ b/job_spec/WATER_MAP_TEST.yml
@@ -96,7 +96,7 @@ WATER_MAP:
         type: integer
     minimization_metric:
       api_schema:
-        description: Evaluation method to minimize. Options include a Fowlkes-Mallows index (fmi) or a threat score (ts).
+        description: Evaluation method to minimize durring the iterative flood depth calculation. Options include a Fowlkes-Mallows index (fmi) or a threat score (ts). Only used when flood_depth_estimator is iterative.
         default: fmi
         type: string
         enum:
