nullable flood_depth_estimator

--- a/job_spec/WATER_MAP_TEST.yml
+++ b/job_spec/WATER_MAP_TEST.yml
@@ -65,9 +65,10 @@ WATER_MAP_TEST:
         type: number
     flood_depth_estimator:
       api_schema:
-        description: Flood depth estimation approach. A value of None indicates that flood depth estimation will not be performed.
-        default: None
+        description: Flood depth estimation approach. A value of null or None indicates that flood depth estimation will not be performed.
+        default: null
         type: string
+        nullable: true
         enum:
           - iterative
           - logstat
