--- a/job_spec/INSAR_ISCE_BURST.yml
+++ b/job_spec/INSAR_ISCE_BURST.yml
@@ -9,15 +9,15 @@ INSAR_ISCE_BURST:
         minItems: 2
         maxItems: 2
         example:
-          - TODO
-          - TODO
+          - S1_249434_IW1_20230523T170733_VV_8850-BURST
+          - S1_249434_IW1_20230511T170732_VV_07DE-BURST
         items:
-          description: TODO
+          description: The reference and secondary bursts.
           type: string
           pattern: "^S1_.*-BURST"
           minLength: 43
           maxLength: 43
-          example: TODO
+          example: S1_249434_IW1_20230523T170733_VV_8850-BURST
     bucket_prefix:
       default:  '""'
     azimuth_looks:
