--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -20,7 +20,10 @@ jobs:
             image_tag: latest
             product_lifetime_in_days: 45
             quota: 0
-            job_files: job_spec/AUTORIFT_ITS_LIVE.yml job_spec/AUTORIFT_ITS_LIVE_TEST.yml
+            job_files: >-
+              job_spec/AUTORIFT_ITS_LIVE.yml
+              job_spec/AUTORIFT_ITS_LIVE_TEST.yml
+              job_spec/S1_CORRECTION_ITS_LIVE.yml
             instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 10000
             expanded_max_vcpus: 10000
