Add hyp3-pdc deployment

--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -182,6 +182,23 @@ jobs:
             ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
             distribution_url: ''
 
+          - environment: hyp3-pdc
+            domain: hyp3-pdc.asf.alaska.edu
+            template_bucket: cf-templates-tlsr0tnnqt5t-us-west-2
+            image_tag: latest
+            # TODO product lifetime could be much shorter since they all get transferred to a separate
+            # S3 bucket, but maybe we want to allow for a backlog of products-to-be-transferred?
+            product_lifetime_in_days: 14
+            quota: 0
+            job_files: job_spec/WATER_MAP.yml
+            instance_types: r6id.xlarge,r6id.2xlarge,r6id.4xlarge,r6id.8xlarge,r5dn.xlarge,r5dn.2xlarge,r5d.xlarge,r5d.2xlarge
+            default_max_vcpus: 640
+            expanded_max_vcpus: 640
+            required_surplus: 0
+            security_environment: ASF
+            ami_id: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
+            distribution_url: ''
+
     environment:
       name: ${{ matrix.environment }}
       url: https://${{ matrix.domain }}
