add missing disk value for water_map_test job spec

--- a/job_spec/WATER_MAP_TEST.yml
+++ b/job_spec/WATER_MAP_TEST.yml
@@ -143,6 +143,7 @@ WATER_MAP_TEST:
       timeout: 36000
       vcpu: 4
       memory: 30720
+      disk: 21
       secrets:
         - EARTHDATA_USERNAME
         - EARTHDATA_PASSWORD
