add burst colleciton to cmr search, add dem coverage check for insar_isce_burst

--- a/job_spec/INSAR_ISCE_BURST.yml
+++ b/job_spec/INSAR_ISCE_BURST.yml
@@ -34,7 +34,8 @@ INSAR_ISCE_BURST:
           - 20x4
           - 10x2
           - 5x1
-  validators: []
+  validators:
+    - check_dem_coverage
   tasks:
     - name: ''
       image: ghcr.io/asfhyp3/hyp3-isce2
