--- a/.github/workflows/deploy-enterprise-test.yml
+++ b/.github/workflows/deploy-enterprise-test.yml
@@ -24,6 +24,7 @@ jobs:
             deploy_ref: refs/heads/develop
             job_files: >-
               job_spec/AUTORIFT.yml
+              job_spec/INSAR_GAMMA.yml
               job_spec/INSAR_GAMMA_TEST.yml
               job_spec/RTC_GAMMA.yml
               job_spec/INSAR_ISCE_TEST.yml
